--- a/OnionConsumeWebAPI/Views/IndigoCommitBooking/booking.cshtml
+++ b/OnionConsumeWebAPI/Views/IndigoCommitBooking/booking.cshtml
@@ -560,28 +560,57 @@
                                                         <td>Rs. @Model.AirlinePNR[a].breakdown.passengerTotals.specialServices.total</td>
                                                     </tr>
                                                 }
-                                                else
+                                               
+                                                if (@Model.AirlinePNR[a].breakdown.passengerTotals.specialServices.total == 0)
                                                 {
-                                                    <tr>
-                                                        <td>Addon Meal Amount:</td>
-                                                        <td>Free</td>
-                                                    </tr>
+                                                    if (@Model.AirlinePNR[a].Mealdata.Count == 0)
+                                                    {
+                                                        <tr style="display: none;">
+                                                            <td>Addon Meal Amount:</td>
+                                                            <td>-</td>
+                                                        </tr>
+                                                    }
+                                                    else
+                                                    {
+                                                        <tr>
+                                                            <td>Addon Meal Amount:</td>
+                                                            <td>Free</td>
+                                                        </tr>
+                                                    }
+
+                                                  
                                                 }
 
                                                 if (@Model.AirlinePNR[a].breakdown.passengerTotals.baggage.total > 0)
                                                 {
+                                                    
                                                     <tr>
                                                         <td>Addon Bagg Amount:</td>
                                                         <td>Rs. @Model.AirlinePNR[a].breakdown.passengerTotals.baggage.total</td>
                                                     </tr>
                                                 }
-                                                else
+                                                
+                                                if (@Model.AirlinePNR[a].breakdown.passengerTotals.baggage.total == 0)
                                                 {
-                                                    <tr>
-                                                        <td>Addon Bagg Amount:</td>
-                                                        <td>Free</td>
-                                                    </tr>
+                                                    if (@Model.AirlinePNR[a].Bagdata.Count == 0)
+                                                    {
+                                                        <tr style="display: none;">
+                                                            <td>Addon Bagg Amount:</td>
+                                                            <td>-</td>
+                                                        </tr>
+                                                    }
+                                                    else
+                                                    {
+                                                        <tr>
+                                                            <td>Addon Bagg Amount:</td>
+                                                            <td>Free</td>
+                                                        </tr>
+                                                        
+                                                    }
+
+                                                  
                                                 }
+
                                                 if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.total > 0)
                                                 {
                                                     <tr>
@@ -589,12 +618,25 @@
                                                         <td>Rs. @Model.AirlinePNR[a].breakdown.passengerTotals.seats.total</td>
                                                     </tr>
                                                 }
-                                                else
+                                              
+                                               if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.total == 0)
                                                 {
-                                                    <tr>
-                                                        <td>Seat Amount:</td>
-                                                        <td>Free</td>
-                                                    </tr>
+                                                    if (@Model.AirlinePNR[a].Seatdata.Count == 0)
+                                                    {
+                                                        <tr style="display: none;">
+                                                            <td>Seat Amount:</td>
+                                                            <td>-</td>
+                                                        </tr>
+                                                    }
+                                                    else
+                                                    {
+                                                        <tr>
+                                                            <td>Seat Amount:</td>
+                                                            <td>Free</td>
+                                                        </tr>
+                                                    }
+
+                                                    
                                                 }
                                                 if (@Model.AirlinePNR[a].breakdown.passengerTotals.fastForward.total > 0)
                                                 {
