--- a/OnionConsumeWebAPI/Views/IndigoTripsell/_IndigoContactDetailsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/IndigoTripsell/_IndigoContactDetailsPartialView.cshtml
@@ -81,7 +81,7 @@
         </div>
         <div class="col-md-3">
             <div class="form-input">
-                <input type="text" id="gstnumber" name="customerNumber" oninput="validateGST(event)" class="companyName hid-block hidden" placeholder="GST Number">
+                <input type="text" id="gstnumber" maxlength="15" name="customerNumber" oninput="validateGST(event)" class="companyName hid-block hidden" placeholder="GST Number">
             </div>
             <p id="gstErrorMessage" style="color: red;font-size:13px;"></p>
             <p id="error-message10" class="error-message" style="display:none">Enter GST Number</p>
@@ -560,7 +560,9 @@
     //Comapny
     function validateInputgst(event) {
         const input = event.target.value;
-        var regex = /^[a-zA-Z\s.,'-]{1,100}$/;
+        //var regex = /^[a-zA-Z\s.,'-]{1,100}$/;
+        var regex = /^(?!\.)(?!.*\.\.\.)[a-zA-Z\s.,'-]{1,100}$/;
+
         if (!regex.test(input)) {
             document.getElementById('errorMessagegst').innerText = "";
             event.target.value = input.replace(/[^a-zA-Z]/g, '');
