--- a/OnionConsumeWebAPI/Views/RoundAATripsell/_TravellerInfoPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundAATripsell/_TravellerInfoPartialView.cshtml
@@ -615,6 +615,34 @@
                         return false;
                     }
                 }
+                else if (month === 4) {
+                    if (day > 30) {
+                        alert("Invalid date! April has only 30 days.");
+                        return false;
+                    }
+                }
+
+                else if (month === 6) {
+                    if (day > 30) {
+                        alert("Invalid date! June has only 30 days.");
+                        return false;
+                    }
+                }
+
+                else if (month === 9) {
+                    if (day > 30) {
+                        alert("Invalid date! September has only 30 days.");
+                        return false;
+                    }
+                }
+
+                else if (month === 11) {
+                    if (day > 30) {
+                        alert("Invalid date! November has only 30 days.");
+                        return false;
+                    }
+                }
+
                 /************************* */
 
 
