--- a/OnionConsumeWebAPI/Views/RoundTripCommitBooking/RoundTripBookingView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundTripCommitBooking/RoundTripBookingView.cshtml
@@ -1428,12 +1428,25 @@
                                                                 <td>Rs. @Model.AirlinePNR[a].breakdown.passengerTotals.specialServices.total</td>
                                                             </tr>
                                                         }
-                                                        else
+
+
+
+                                                        if (@Model.AirlinePNR[a].breakdown.passengerTotals.specialServices.total == 0)
                                                         {
-                                                            <tr>
-                                                                <td>Addon Meal Amount:</td>
-                                                                <td>Free</td>
-                                                            </tr>
+                                                            if (@Model.AirlinePNR[a].Mealdata.Count == 0)
+                                                            {
+                                                                <tr style="display: none;">
+                                                                    <td>Addon Meal Amount:</td>
+                                                                    <td>-</td>
+                                                                </tr>
+                                                            }
+                                                            else
+                                                            {
+                                                                <tr>
+                                                                    <td>Addon Meal Amount:</td>
+                                                                    <td>Free</td>
+                                                                </tr>
+                                                            }
                                                         }
 
                                                         if (@Model.AirlinePNR[a].breakdown.passengerTotals.baggage.total > 0)
@@ -1455,13 +1468,28 @@
 
                                                             </tr>
                                                         }
-                                                        else
+
+
+                                                        if (@Model.AirlinePNR[a].breakdown.passengerTotals.baggage.total == 0)
                                                         {
-                                                            <tr>
-                                                                <td>Addon Bagg Amount:</td>
-                                                                <td>Free</td>
-                                                            </tr>
+                                                            if (@Model.AirlinePNR[a].Bagdata.Count == 0)
+                                                            {
+                                                                <tr style="display: none;">
+                                                                    <td>Addon Bagg Amount:</td>
+                                                                    <td>-</td>
+                                                                </tr>
+                                                            }
+                                                            else
+                                                            {
+                                                                <tr>
+                                                                    <td>Addon Bagg Amount:</td>
+                                                                    <td>Free</td>
+                                                                </tr>
+
+                                                            }
                                                         }
+
+
                                                         if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.total > 0)
                                                         {
                                                             <tr>
@@ -1469,12 +1497,25 @@
                                                                 <td>Rs. @Model.AirlinePNR[a].breakdown.passengerTotals.seats.total</td>
                                                             </tr>
                                                         }
-                                                        else
+
+                                                        if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.total == 0)
                                                         {
-                                                            <tr>
-                                                                <td>Seat Amount:</td>
-                                                                <td>Free</td>
-                                                            </tr>
+                                                            if (@Model.AirlinePNR[a].Seatdata.Count == 0)
+                                                            {
+                                                                <tr style="display: none;">
+                                                                    <td>Seat Amount:</td>
+                                                                    <td>-</td>
+                                                                </tr>
+                                                            }
+                                                            else
+                                                            {
+                                                                <tr>
+                                                                    <td>Seat Amount:</td>
+                                                                    <td>Free</td>
+                                                                </tr>
+                                                            }
+
+
                                                         }
 
 
