--- a/CoporateBooking/Views/IndigoTripsell/_IndigoTripsellPatialView.cshtml
+++ b/CoporateBooking/Views/IndigoTripsell/_IndigoTripsellPatialView.cshtml
@@ -516,9 +516,9 @@
 
                                                         <li>1: Cabin Bag: 7 k.g</li>
                                                         <li>2: Check-IN: 30 k.g  </li>
-                                                        <li>3: Cancellation: Fee starts at (Rs. 3499) Onward.</li>
-                                                        <li>4: Date Change: Fee starts at (Rs. 2499) Onward.</li>
-                                                        <li>5: Seat :  Free seats</li>
+                                                        <li>3: Cancellation: Change charges upto 499</li>
+                                                        <li>4: Date Change: Change charges upto 0</li>
+                                                        <li>5: Seat : Limited Free Seat</li>
                                                         <li>6: Meal :Complimentary meal</li>
 
                                                     </ul>
