--- a/CoporateBooking/Views/ResultFlightView/_FlightResultsSortingPartialView.cshtml
+++ b/CoporateBooking/Views/ResultFlightView/_FlightResultsSortingPartialView.cshtml
@@ -822,25 +822,25 @@
 
                                  else if (Model.SimpleAvailibilityaAddResponcelist[j].faresIndividual[k].procuctclass == "F")
                                 {
-                                    <td>7 Kg</td>
-                                    <td><strong>40 k.g.</strong></td>
+                                    <td>10 K.g.</td>
+                                    <td><strong>15 k.g.</strong></td>
                                     <td>
 
-                                        <div>Fee starts at (Rs. 2499) Onward.</div>
+                                        <div>Change charges upto 499</div>
                                     </td>
                                     <td>
 
-                                        <div>Fee starts at (Rs. 999) Onward.</div>
+                                        <div>Change charges upto 0</div>
                                     </td>
                                     <td>
                                         <div>
-                                            Free seats
+                                            Limited Free Seat
                                         </div>
 
                                     </td>
                                     <td>
                                         <div>
-                                            Complimentary meal
+                                            Free Corporate Meal
                                         </div>
                                     </td>
 
