--- a/OnionConsumeWebAPI/Views/ResultFlightView/_FlightResultsSortingPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/ResultFlightView/_FlightResultsSortingPartialView.cshtml
@@ -295,7 +295,7 @@
                                                 }
                                                 else if (Model.SimpleAvailibilityaAddResponcelist[j].segments.Count == 2)
                                                 {
-                                                    <div class="mt-1"> @Model.SimpleAvailibilityaAddResponcelist[j].segments[0].legs[0].designator.destination </div>
+                                                    <div class="mt-1"> @Model.SimpleAvailibilityaAddResponcelist[j].segments[0].legs[0].designator.destination ,@Model.SimpleAvailibilityaAddResponcelist[j].segments[1].legs[0].designator.destination</div>
 
                                                 }
                                                 else
@@ -313,7 +313,7 @@
                                                 }
                                                 else
                                                 {
-                                                    <div class="mt-1"> @Model.SimpleAvailibilityaAddResponcelist[j].segments[0].legs[0].designator.destination  <b>,</b></div>
+                                                    <div class="mt-1"> @Model.SimpleAvailibilityaAddResponcelist[j].segments[0].legs[0].designator.destination,@Model.SimpleAvailibilityaAddResponcelist[j].segments[1].legs[0].designator.destination</div>
 
                                                 }
 
