--- a/OnionConsumeWebAPI/Views/SGTripsell/_ContactDetailsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/SGTripsell/_ContactDetailsPartialView.cshtml
@@ -76,7 +76,7 @@
         </div>
         <div class="col-md-3">
             <div class="form-input">
-                <input type="text" id="gstnumber" name="customerNumber" oninput="validateGST(event)" class="companyName hid-block hidden" placeholder="GST Number">
+                <input type="text" id="gstnumber" maxlength="15" name="customerNumber" oninput="validateGST(event)" class="companyName hid-block hidden" placeholder="GST Number">
             </div>
             <p id="gstErrorMessage" style="color: red;font-size:13px;"></p>
             <p id="error-message10" class="error-message" style="display:none">Enter GST Number</p>
