--- a/OnionConsumeWebAPI/Views/SGTripsell/_TravellerInfoPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/SGTripsell/_TravellerInfoPartialView.cshtml
@@ -388,7 +388,16 @@
                                 firstInvalidElement = element;
                             }
                         }
-                    } else if (field.className === 'contactphone' && element.value.trim().length < 10) {
+                    }
+
+                    else if (element.value.trim().startsWith('0')) {
+                        showError(element, 'Phone number cannot start with 0');
+                        if (!firstInvalidElement) {
+                            firstInvalidElement = element;
+                        }
+                    }
+                    
+                    else if (field.className === 'contactphone' && element.value.trim().length < 10) {
                         // If the phone number has fewer than 10 digits, show an error message
                         showError(element, 'Phone number must be at least 10 digits');
                         if (!firstInvalidElement) {
