--- a/OnionConsumeWebAPI/Views/AATripsell/_ServiceRequestsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/AATripsell/_ServiceRequestsPartialView.cshtml
@@ -394,10 +394,24 @@
 
         });
 
-        $("#btnfocus").click(function () {
-            alert("Do you want select connect seat");
-            $("#seattab2").click();
+        // $("#btnfocus").click(function () {
+        //     alert("Do you want select connect seat");
+        //     $("#seattab2").click();
+        // });
+           $("#btnfocus").click(function () {
+            var confirmation = confirm("Do you want to select a connecting seat?");
+            if (confirmation == true) {
+                if ($("#seattab2").is(":visible")) {
+                    $("#seattab2").click();
+                }
+            }
+            else {
+
+                return false;
+            }
         });
+
+
 
     });
 
@@ -839,7 +853,7 @@
                                                             string ssrprice = Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
                                                             string Mealcode = Model.Meals.legSsrs[0].legssrs[s].ssrCode;
                                                             // string MealcodeData = Mealcode.StartsWith("V", StringComparison.OrdinalIgnoreCase).ToString();
-                                                            string Mealname = Model.Meals.legSsrs[0].legssrs[s].name + " ₹" + @Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
+                                                            string Mealname = Mealcode +"-" + Model.Meals.legSsrs[0].legssrs[s].name + " ₹" + @Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
                                                             ssrkey = Model.Meals.legSsrs[0].legssrs[s].legpassengers[pa].ssrKey + "_" + @Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
                                                             string passengerKey = Model.Meals.legSsrs[0].legssrs[s].legpassengers[pa].passengerKey;
                                                             // if (MealcodeData != "False")
@@ -857,6 +871,7 @@
                                                             string ImageUrl = Url.Content("/img/images/" + MealImagelist + ".png");
 
                                                             string combinedValue = ssrkey + "|" + ImageUrl;
+                                                         
                                                             if (ssrkey != null)
                                                             {
                                                                 mealOptions.Add(new SelectListItem { Text = Mealname, Value = combinedValue });
@@ -1114,7 +1129,7 @@
                                                             string ssrprice = Model.Meals.legSsrs[1].legssrs[s].legpassengers[0].price;
                                                             string Mealcode = Model.Meals.legSsrs[1].legssrs[s].ssrCode;
                                                             //string MealData = Mealcode.StartsWith("V", StringComparison.OrdinalIgnoreCase).ToString();
-                                                            string Mealname = Model.Meals.legSsrs[1].legssrs[s].name + " @" + @Model.Meals.legSsrs[1].legssrs[s].legpassengers[0].price;
+                                                            string Mealname = Mealcode +"-"+ Model.Meals.legSsrs[1].legssrs[s].name + " @" + @Model.Meals.legSsrs[1].legssrs[s].legpassengers[0].price;
                                                             ssrkey = Model.Meals.legSsrs[1].legssrs[s].legpassengers[pas].ssrKey + "_" + @Model.Meals.legSsrs[1].legssrs[s].legpassengers[0].price;
                                                             string passengerKey = Model.Meals.legSsrs[1].legssrs[s].legpassengers[pas].passengerKey;
                                                             string MealImagelist = string.Empty;
