--- a/OnionConsumeWebAPI/Views/AATripsell/_TravellerInfoPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/AATripsell/_TravellerInfoPartialView.cshtml
@@ -187,18 +187,18 @@
                                     </select>
                                     <select class="brd-none month-select" id="month_@inafantIdx" required>
                                         <option value="" disabled selected>Month</option>
-                                        <option value="0">January</option>
-                                        <option value="1">February</option>
-                                        <option value="2">March</option>
-                                        <option value="3">April</option>
-                                        <option value="4">May</option>
-                                        <option value="5">June</option>
-                                        <option value="6">July</option>
-                                        <option value="7">August</option>
-                                        <option value="8">September</option>
-                                        <option value="9">October</option>
-                                        <option value="10">November</option>
-                                        <option value="11">December</option>
+                                        <option value="1">January</option>
+                                        <option value="2">February</option>
+                                        <option value="3">March</option>
+                                        <option value="4">April</option>
+                                        <option value="5">May</option>
+                                        <option value="6">June</option>
+                                        <option value="7">July</option>
+                                        <option value="8">August</option>
+                                        <option value="9">September</option>
+                                        <option value="10">October</option>
+                                        <option value="11">November</option>
+                                        <option value="12">December</option>
                                     </select>
                                     <select class="brd-none day-select" id="day_@inafantIdx" required>
                                         <option value="" disabled selected>Day</option>
@@ -520,7 +520,7 @@
             function validateInfantDOB(inafantIdx) {
                 var year = document.getElementById("year_" + inafantIdx).value;
                 //var month = document.getElementById("month_" + inafantIdx).value;
-                var month = parseInt(document.getElementById("month_" + inafantIdx).value) + 1;
+                var month = parseInt(document.getElementById("month_" + inafantIdx).value);
                 var day = document.getElementById("day_" + inafantIdx).value;
                 var dob = year + "-" + month + "-" + day;
                 /****************************/
@@ -530,6 +530,35 @@
                         return false;
                     }
                 }
+
+                     else if (month === 4) {
+                        if (day > 30) {
+                            alert("Invalid date! April has only 30 days.");
+                            return false;
+                        }
+                    }
+
+                    else if (month === 6) {
+                        if (day > 30) {
+                            alert("Invalid date! June has only 30 days.");
+                            return false;
+                        }
+                    }
+
+                    else if (month === 9) {
+                        if (day > 30) {
+                            alert("Invalid date! September has only 30 days.");
+                            return false;
+                        }
+                    }
+
+                    else if (month === 11) {
+                        if (day > 30) {
+                            alert("Invalid date! November has only 30 days.");
+                            return false;
+                        }
+                    }
+
                 /************************* */
                
                 if (year == "") {
